--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.5.1",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
+    "expo-sharing": "~8.1.0",
     "lottie-react-native": "~2.6.1",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
