--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@dudigital/react-native-zoomable-view": "^1.0.15",
@@ -15,11 +16,25 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "expo": "~37.0.3",
+    "expo-asset": "~8.1.3",
+    "expo-av": "~8.1.0",
+    "expo-battery": "~2.1.0",
+    "expo-camera": "~8.2.0",
+    "expo-constants": "~9.0.0",
+    "expo-file-system": "~8.1.0",
     "expo-font": "~8.1.0",
+    "expo-gl": "~8.1.0",
+    "expo-haptics": "~8.1.0",
+    "expo-linear-gradient": "~8.1.0",
     "expo-sharing": "~8.1.0",
+    "expo-updates": "~0.2.1",
     "firebase": "7.9.0",
+    "gl-react": "^4.0.1",
+    "gl-react-expo": "^4.0.1",
     "lottie-react-native": "~2.6.1",
+    "moment": "^2.24.0",
     "native-base": "^2.13.12",
+    "patch-package": "^6.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -27,14 +42,27 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
+    "react-native-redash": "^14.2.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-shared-element": "0.5.6",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.1.1"
+    "react-native-webview": "8.1.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-hooks": "^1.0.3",
+    "react-navigation-shared-element": "^2.0.2",
+    "react-navigation-stack": "2.1.1",
+    "styled-components": "^5.1.1",
+    "use-memo-one": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.62.17",
+    "babel-preset-expo": "~8.1.0",
+    "typescript": "^3.9.6"
   },
   "private": true
 }
