--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
       "ios",
       "android"
     ],
+    "privacy": "public",
     "version": "1.2.0",
     "sdkVersion": "37.0.0",
     "orientation": "portrait",
