--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "privacy": "public",
     "version": "1.2.0",
     "sdkVersion": "37.0.0",
+    "permissions" : [],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
