--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dudigital/react-native-zoomable-view": "^1.0.15",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-navigation/material-bottom-tabs": "^5.2.10",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "expo": "~37.0.3",
