--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@dudigital/react-native-zoomable-view": "^1.0.15",
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-navigation/material-bottom-tabs": "^5.2.10",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/material-bottom-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@types/jest": "^26.0.5",
+    "@types/node": "^14.0.23",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.3",
     "expo-av": "~8.1.0",
@@ -54,11 +56,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "^16.9.41",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.62.17",
     "babel-preset-expo": "~8.1.0",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   },
   "private": true
 }
